Implement GET request to tvi.superservicios to get COT exemption report
